<resources>
    <string name="ACCOUNT_INFO" />
    <string name="ACTIVATE_IDENTIFIER" />
    <string name="ADVERTISE_STRATEGY" />
    <string name="ALREADY_OWN_PKGS" />
    <string name="BIGRAM_TARGET_VERSION">5.4.5.0</string>
    <string name="CELLDICT_PACK_TARGET_VERSION">5.4.6.1</string>
    <string name="CELL_DICTIONARY" />
    <string name="CURRENT_CHANNEL_CODE" />
    <string name="CURRENT_HOTWORD_DICTIONARY_ID">com.cootek.smartinputv5.language.english</string>
    <string name="CURRENT_LANGUAGE">english</string>
    <string name="CURRENT_LANG_BEFORE_UPDATE" />
    <string name="CURRENT_SMILEY_CATEGORY" />
    <string name="CURRENT_SMILEY_TAB" />
    <string name="CURVE_DOWNLOAD_LANGUAGE" />
    <string name="CURVE_TARGET_VERSION">5.6.4.1</string>
    <string name="CUSTOM_SKIN_COLOR_SET">SKIN_COLOR_SET_BLACK</string>
    <string name="DEFAULT_DICTIONARY_LAST_UPDATE_TIME">0</string>
    <string name="EMOJI_PLUGIN_TARGET_VERSION">5.5.0.0</string>
    <string name="LANGUAGE_ENGLISH">English</string>
    <string name="chinese">Chinese</string>
    <string name="emoji_display_title">Emoji Style</string>
    <string name="english">English</string>
    <string name="handwriting_provider_website">http://tianxing.com</string>
    <string name="language_switch_mode_title">Switch language by</string>
    <string name="message_pal_summary">Festivous messages template</string>
    <string name="message_pal_title">MessagePal</string>
    <string name="option_customize_keyboard_size">Keyboard appearance</string>
    <string name="option_customize_keyboard_size_summary">Customize keyboard height, width and position</string>
    <string name="optpage_about">About</string>
    <string name="optpage_about_handwriting">About handwriting technology</string>
    <string name="optpage_about_summary">Help, recommend, feedback, version info</string>
    <string name="optpage_accessibility_summary">Voice feedback</string>
    <string name="optpage_accessibility_title">Accessibility</string>
    <string name="optpage_advanced_prediction">Contextual prediction</string>
    <string name="optpage_advanced_prediction_summary">Enable contextual and next word prediction</string>
    <string name="optpage_all_applications">All applications</string>
    <string name="optpage_all_applications_summary">Browse all applications from TouchPal team</string>
    <string name="optpage_an_ang">an = ang</string>
    <string name="optpage_animation_effects">Keyboard Animations</string>
    <string name="optpage_animation_effects_summary">Layout switching and curve tracing animations</string>
    <string name="optpage_auto_capitalization">Auto capitalization</string>
    <string name="optpage_auto_capitalization_summary">Automatically capitalize the first word of each sentence</string>
    <string name="optpage_auto_space">Auto space</string>
    <string name="optpage_auto_space_summary">Append space after word automatically</string>
    <string name="optpage_autocorrection">Auto-correction</string>
    <string name="optpage_autocorrection_summary">Correct typing mistakes automatically</string>
    <string name="optpage_bug_report">Bug report</string>
    <string name="optpage_bug_report_summary">Report bug to TouchPal team</string>
    <string name="optpage_builddate">Build Date</string>
    <string name="optpage_builddate_summary">2015-06-18</string>
    <string name="optpage_c_ch">c = ch</string>
    <string name="optpage_candidate_size">Candidate size</string>
    <string name="optpage_category_about">About</string>
    <string name="optpage_category_share">Share</string>
    <string name="optpage_category_support">Support</string>
    <string name="optpage_clearall">Clear all</string>
    <string name="optpage_cloke_enable_mode">Cloud prediction mode</string>
    <string name="optpage_commit_animation">Input animation</string>
    <string name="optpage_commit_animation_summary">Float up effect when inputting suggestion</string>
    <string name="optpage_cootek">Provided by TouchPal team</string>
    <string name="optpage_cootek_summary">http://www.touchpal.com</string>
    <string name="optpage_customize">Customize symbols</string>
    <string name="optpage_customize_summary">Customize symbols beside the phone pad</string>
    <string name="optpage_dictionary_management">Dictionary management</string>
    <string name="optpage_dictionary_management_summary">Import contact, backup and restore, sub dictionary</string>
    <string name="optpage_en_eng">en = eng</string>
    <string name="optpage_enable_curve">Curve® - Word gesture</string>
    <string name="optpage_enable_curve_summary">Input text by sliding across letters</string>
    <string name="optpage_f_h">f = h</string>
    <string name="optpage_font_select_title">Keyboard font</string>
    <string name="optpage_forbid_simple_candidate_style_summary">Show more than 3 candidates on top</string>
    <string name="optpage_forbid_simple_candidate_style_title">Classic style candidates</string>
    <string name="optpage_fuzzy_pinyin">Fuzzy PinYin</string>
    <string name="optpage_handwriting">Chinese handwriting</string>
    <string name="optpage_handwriting_provider">Handwriting engine provider</string>
    <string name="optpage_handwriting_provider_summary">The engine for Chinese handwriting input is powered by SinoVoice HCICloud.</string>
    <string name="optpage_help">Help</string>
    <string name="optpage_help_summary">Learn more about TouchPal</string>
    <string name="optpage_ian_iang">ian = iang</string>
    <string name="optpage_in_ing">in = ing</string>
    <string name="optpage_keyboard_num_line_style_title">Number Row</string>
    <string name="optpage_l_n">l = n</string>
    <string name="optpage_label_keyboard_layout">Keyboard &amp; appearance</string>
    <string name="optpage_label_keyboard_layout_summary">Key press effect, theme, keyboard layout, plug-ins</string>
    <string name="optpage_label_smart_input">Smart input</string>
    <string name="optpage_label_smart_input_summary">Input setting, customization, mistyping correct</string>
    <string name="optpage_landscape_screen_mode_summary">In landscape mode, expand textbox to maximum, hiding the rest of the screen</string>
    <string name="optpage_landscape_screen_mode_title">Expand textbox to full screen</string>
    <string name="optpage_language">Languages &amp; input keyboard</string>
    <string name="optpage_language_list">Languages</string>
    <string name="optpage_language_summary">TouchPal Curve®, mix languages, language packs</string>
    <string name="optpage_long_press_delay">Key long-press delay</string>
    <string name="optpage_mistypingcorrection">Correct mistyping</string>
    <string name="optpage_mistypingcorrection_summary">Predict the right word while mistyping</string>
    <string name="optpage_mixedlang">Mixed language input</string>
    <string name="optpage_mixedlang_summary">Predict candidates from the secondary language</string>
    <string name="optpage_nextword">Predict next word</string>
    <string name="optpage_nextword_summary" />
    <string name="optpage_one_handed_mode">One-handed layout</string>
    <string name="optpage_popup">Keypress popup</string>
    <string name="optpage_portrait_keyboard_size">Keyboard size</string>
    <string name="optpage_predictmode">Word prediction</string>
    <string name="optpage_predictmode_summary">Enable word prediction</string>
    <string name="optpage_privacy_policy">Privacy Policy</string>
    <string name="optpage_r_l">r = l</string>
    <string name="optpage_s_sh">s = sh</string>
    <string name="optpage_selectall">Select all</string>
    <string name="optpage_send_usage_statistics">Send usage statistics</string>
    <string name="optpage_send_usage_statistics_summary">Send anonymous usage statistics to help to improve the user experience</string>
    <string name="optpage_share_with_friends">Share TouchPal</string>
    <string name="optpage_share_with_friends_summary">Share TouchPal to your friends</string>
    <string name="optpage_shortcut">Shortcut input</string>
    <string name="optpage_shortcut_summary">Customize your shortcut input</string>
    <string name="optpage_shuangpin_enable_mode">ShuangPin mode management</string>
    <string name="optpage_skin">Themes</string>
    <string name="optpage_skin_summary">Manage themes</string>
    <string name="optpage_slip_change_sur">Swipe to switch layout</string>
    <string name="optpage_slip_change_sur_summary">Swipe horizontally over the keyboard to switch layout or symbol pages</string>
    <string name="optpage_sound">Keypress sound</string>
    <string name="optpage_space_get_next_word">Tap space to select next word</string>
    <string name="optpage_speed">Feel the speed</string>
    <string name="optpage_speed_view">Speed statistics</string>
    <string name="optpage_speedometer">Speedometer</string>
    <string name="optpage_speedometer_summary">Show input speed on the keyboard surface</string>
    <string name="optpage_stroke_filter">Stroke filtering</string>
    <string name="optpage_stroke_filter_summary">Find expected word easily by stroke filtering</string>
    <string name="optpage_symbol_keyboard_layout">Symbol layout</string>
    <string name="optpage_touchpal_forum">TouchPal Forum</string>
    <string name="optpage_touchpal_wechat">WeChat: touchpal-fan</string>
    <string name="optpage_touchpal_weibo">Weibo: @触宝输入法</string>
    <string name="optpage_traditional_Chinese">Chinese Conversion</string>
    <string name="optpage_traditional_Chinese_summary">Convert Simplified Chinese to Traditional</string>
    <string name="optpage_uan_uang">uan = uang</string>
    <string name="optpage_update">Software update</string>
    <string name="optpage_update_dic">Update dictionaries</string>
    <string name="optpage_update_dic_summary">Update new words from cloud to dictionaries</string>
    <string name="optpage_update_management">Update</string>
    <string name="optpage_update_management_summary">Update frequency, version update</string>
    <string name="optpage_update_set">Set update frequency</string>
    <string name="optpage_update_set_summary">Dictionary, service optimization frequency setting</string>
    <string name="optpage_update_summary">Check updates of TouchPal</string>
    <string name="optpage_user_feedback">Feedback</string>
    <string name="optpage_user_feedback_summary">Reach TouchPal team to provide feedback</string>
    <string name="optpage_version">Version</string>
    <string name="optpage_version_category">@string/optpage_version</string>
    <string name="optpage_version_category_summary">TouchPal version</string>
    <string name="optpage_version_summary">5.7.2.4.201506181616</string>
    <string name="optpage_vibrate">Keypress vibration</string>
    <string name="optpage_visit_handwriting_provider_website">Go to Tianxing Park</string>
    <string name="optpage_wubi_auto_adjust_freq">Auto adjust word frequency(Wubi)</string>
    <string name="optpage_wubi_big_charset">Wubi GBK</string>
    <string name="optpage_z_zh">z = zh</string>
    <string name="quick_switcher_summary">Switch between different keyboards</string>
    <string name="quick_switcher_title">Keyboard Jumper</string>
    <string name="race_summary">Race against players and test speed of your typing</string>
    <string name="race_title">Typing race</string>
    <string name="sina_weibo_summary">Launch Sina Weibo</string>
    <string name="sina_weibo_title">Sina Weibo</string>
    <string name="twitter_summary">Launch Twitter</string>
    <string name="twitter_title">Twitter</string>
    <string name="url_navigator_summary">Launch Navigator</string>
    <string name="url_navigator_title">Navigator</string>
    <string name="voice_chinese_choose_title">Chinese voice input</string>
    <string name="voice_input_engine_choose_title">Voice input engine</string>
    <string name="voice_input_language_choose_title">Voice input language</string>
</resources>